# FedKD-Edge

./: .gitignore  1-download_dataset.py  2-train_teacher_cnn.py  3-draw_teacher_train_graph.py  4-distillation_check.py  5-draw-distillation-test-heatmap.py  5-draw_distillation_test_heatmap.py  6-split_dataset.py  7-fedavg_baseline.py  8-draw_fed_avg_baseline_graph.py  8-draw_fed_graph.py  9-teacher_model_acc.py  README.md  TENSORBOARD_README.md  main.py  pyproject.toml  view_tensorboard.sh
models/: student_cnn.py  teacher_cnn.py
runs/client_0/: events.out.tfevents.1770371146.yumuzhihan.19409.0  events.out.tfevents.1770371188.yumuzhihan.19403.1  events.out.tfevents.1770371262.yumuzhihan.23749.0  events.out.tfevents.1770371535.yumuzhihan.3946.0  events.out.tfevents.1770371570.yumuzhihan.3945.1  events.out.tfevents.1770371597.yumuzhihan.3944.2  events.out.tfevents.1770371620.yumuzhihan.3940.3  events.out.tfevents.1770371643.yumuzhihan.3944.4  events.out.tfevents.1770371667.yumuzhihan.3948.5  events.out.tfevents.1770371694.yumuzhihan.3944.6  events.out.tfevents.1770371719.yumuzhihan.3940.7  events.out.tfevents.1770371744.yumuzhihan.3947.8  events.out.tfevents.1770371768.yumuzhihan.3946.9  events.out.tfevents.1770371793.yumuzhihan.3940.10  events.out.tfevents.1770371819.yumuzhihan.3946.11  events.out.tfevents.1770371845.yumuzhihan.3944.12  (+132 more)
scripts/: cifar100_run.sh  cifar10_hybrid+fashionmnist_run.sh  feature_matrix.sh  feature_run.sh  fedavg_run.sh  hybrid_matrix.sh  hybrid_run.sh  logit_run.sh  more_k_experiment.sh
utils/: get_logger.py
(+1341 files in other folders)
